--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,6 +8,7 @@ variables:
   followingservice_MYSQL_REPLICA_PORT: 3306
   MYSQL_USER: root
   MYSQL_PASS: imad
+  RABBIT_HOST: localhost
 
 pool:
   vmImage: ubuntu-latest
@@ -20,6 +21,11 @@ steps:
     dockerComposeFile: 'docker/docker-compose.yml'
     action: 'Run a Docker Compose command'
     dockerComposeCommand: 'up -d'
+
+- task: PowerShell@2
+  inputs:
+    targetType: 'inline'
+    script: 'Start-Sleep -Seconds 120'
     
 - task: Maven@3
   inputs:
@@ -43,3 +49,8 @@ steps:
     buildContext: 
     tags: 'latest'
 
+- task: KubernetesManifest@0
+  inputs:
+    action: 'deploy'
+    kubernetesServiceConnection: 'kube_kwetterimad'
+    manifests: 'kubernetes/followingservice.yaml'
